@startuml

class DinosaurioDataStore {
    +cargarDatosCSV(String rutaCSV): void
    +getAllDinosauriosAsJSON(): void
    +generarDinosaurio(): void
}

class DinosaurioService{
    +agregarDinosaurio(Dinos): void
}

class DinosaurioFactory{
    +crearDinosaurio(String especie, int edad, double altura_maxima, int peso_maximo, Sexo sexo, boolean tuvoHijos, FaseCicloDeVida faseciclodevida): Dinosaurio
}

file datos-dinos.csv{
}
interface DinosaurioRepository{
    +findDinosauriobyId(id: int): Dinosaurio
    +findDinosauriobyEspecie(especie: string): Dinosaurio
    +findDinosauriobyTipo(tipo: String): Dinosaurio
}
class DinosaurioController{
    +getDinosauriobyId(id: int): Dinos
    +getDinosauriobyEspecie(especie: string): Dinos
    +getDinosauriobyTipo(tipo: String): Dinos
}
class frontend{
}

csv -->  DinosaurioDataStore : almacena
DinosaurioDataStore --> DinosaurioService : llama
DinosaurioService --> DinosaurioFactory : llama
DinosaurioService <-- DinosaurioFactory : crea
DinosaurioController --> frontend : consume
DinosaurioService --> DinosaurioRepository : manda
DinosaurioRepository --> DinosaurioController

@enduml
